fix skills overlap at 1000px

--- a/sass/_mobile.scss
+++ b/sass/_mobile.scss
@@ -229,6 +229,24 @@
     }
 }
 
+// SCREEN AT 1000PX
+@media screen and (max-width: 1000px) {
+    body #skills {
+
+        height: 1100px;
+
+        .content-cont {
+            .skills-container {
+                grid-template-columns: 1fr 1fr;
+                padding: 0;
+                row-gap: 1em;
+                column-gap: 1.5em;
+            }
+        }
+    }
+};
+    
+
 // SCREEN AT 800PX
 @media screen and (max-width: 800px) {
 
